Documenter clients endpoints
